v1.2.0 - BREAKING CHANGES
- Library:
	- Refactoring: Status* => Requirement*.
- Documentation:
	- Feature: updated to v1.2.0.

v1.1.0
- Library:
	- Maintenance: dependency update (requests 2.31.0 => 2.32.3, jupyter 1.0.0 => 1.1.1, coverage 7.6.1 => 7.6.4).
- Documentation:
	- Feature: updated to v1.1.0.

v1.0.0
- Library:
	- Feature: support retrieving local package information from requirements.txt and Dockerfile (devcontainer). 
	- Feature: support retrieving release information from PyPi.org.
	- Feature: ability to compare local package information and PyPi.org's release information.
- Notebook:
	- Feature: demo for the main use case (evaluate the up-to-date status of the dependencies).
- Documentation:
	- Feature: covers all the features available in v1.0.0.